bug fix on safari

--- a/src/components/UI/Projects/ProjectStats/HearingTreatmentMobile/style.module.scss
+++ b/src/components/UI/Projects/ProjectStats/HearingTreatmentMobile/style.module.scss
@@ -48,7 +48,7 @@
         width: 100%;
         max-width: 343px;
         margin: auto;
-        height: max-content;
+        height: auto;
       }
       & > span {
         position: absolute;
